# Move

./: .env.boilerplate  README.md  main.py  pyproject.toml  sql_app.db
app/api/: login_router.py  register_router.py  service_consume_router.py  service_registry_router.py
app/core/: secure_access.py
app/db/: dbconfig.py  models.py
app/schemas/: schema.py
app/tests/: test_main.py
