[project]
name = "move"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=48.0.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "httpx2>=2.4.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.49.0",
]
